# adhd-ranch

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  PRD.md  README.md  Taskfile.yaml  biome.json  idea.md  index.html  new-focus.html  package-lock.json  package.json  settings.html  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/commands/: Cargo.toml
crates/commands/src/: applier.rs  caps.rs  error.rs  focus.rs  lib.rs  lifecycle.rs  proposal.rs
crates/domain/: Cargo.toml
crates/domain/src/: cap_monitor.rs  caps.rs  decision.rs  error.rs  focus.rs  lib.rs  monitor.rs  parse.rs  pig_rect.rs  proposal.rs  settings.rs  slug.rs  timer.rs
crates/http-api/: Cargo.toml
crates/http-api/src/: applier.rs  lib.rs  router.rs  serve.rs
crates/http-api/src/router/: focuses.rs  health.rs  mod.rs  proposals.rs  tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: atomic.rs  decisions.rs  focus_store.rs  jsonl.rs  lib.rs  proposals.rs  repository.rs  settings_writer.rs  watcher.rs  writer.rs
docs/decisions/: v1.1-floating-window.md
issues/: 000-scaffolding.md  001-tray-popover-skeleton.md  002-build-pipeline-and-packaging.md  003-markdown-storage-and-watcher.md  004-http-api-skeleton.md  005-checkpoint-slash-command-and-proposals.md  006-accept-reject-proposals.md  007-widget-crud-actions.md  008-caps-and-overload-alerts.md  009-edit-proposal-modal-and-polish.md  010-popover-spaces-and-fullscreen.md  011-nonactivating-panel.md  013-tray-icon-focus-list.md  014-new-focus-from-tray.md  015-delete-focus-from-tray.md  016-real-sprite-sheet.md  022-wrangle.md  024-display-subsystem-agent-prompt.md  024-display-subsystem.md  028-focus-timer-domain-and-creation.md  029-timer-expiry-and-notification-interface.md  030-pig-growth-expired-visual-tray-list.md  031-notification-settings-tray.md  032-preferences-window.md  033-pig-ipc-api-layer.md  034-focus-invariants-in-domain.md  036-ts-types-from-rust.md  README.md
issues/done/: 002-build-pipeline-and-packaging.md  003-markdown-storage-and-watcher.md  005-checkpoint-slash-command-and-proposals.md  007-widget-crud-actions.md  008-caps-and-overload-alerts.md  009-edit-proposal-modal-and-polish.md  010-regular-mac-app-skeleton.md  011-app-menu-titlebar-always-on-top.md  012-pig-overlay.md  015-delete-focus-from-tray.md  016-real-sprite-sheet.md  018-larger-pig-hitbox.md  019-pigdetail-redesign.md  020-drag-and-toss.md  021-all-monitors-default.md  025-pig-freeze-keep-still.md  026-settings-preferences.md  027-confirm-delete-setting.md  028-focus-timer-domain-and-creation.md  035-focus-store-unit-tests.md
ralph/: AGENTS.md  PLAN.md  PROMPT.md  README.md  Taskfile.yaml  init.sh  ralph.sh
skill/: checkpoint.md
src/: main.tsx  new-focus.tsx  settings.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/app/: cap_notifier.rs  menu.rs  mod.rs  overlay_manager.rs  paths.rs  pig_hittest.rs  tray.rs  window_always_on_top.rs  window_autosave.rs  window_level.rs
src-tauri/src/display/: mod.rs  monitor.rs  overlay.rs
src-tauri/src/ui_bridge/: mod.rs
src/api/: caps.ts  debug.ts  debugOverlay.ts  fixtureFocusReader.test.ts  fixtureFocusReader.ts  fixtureProposalReader.ts  focusWriter.ts  focuses.ts  health.ts  monitors.ts  pig.ts  proposals.ts  settings.ts  tauriFocusReader.ts  tauriProposalReader.ts
src/components/: App.test.tsx  App.tsx  CapBadge.test.tsx  CapBadge.tsx  EditProposalModal.test.tsx  EditProposalModal.tsx  FocusCard.test.tsx  FocusCard.tsx  FocusList.test.tsx  FocusList.tsx  NewFocusForm.test.tsx  NewFocusForm.tsx  NewFocusWindow.tsx  PendingTray.test.tsx  PendingTray.tsx  PigDetail.test.tsx  PigDetail.tsx  PigSprite.tsx  SettingsWindow.tsx  TaskRow.tsx  Titlebar.tsx
src/data/: fixtures.ts
src/hooks/: useAppState.test.tsx  useAppState.ts  useCaps.ts  useConfirmDelete.ts  useDebugOverlay.ts  useFocuses.test.tsx  useFocuses.ts  useNewFocusWindow.ts  usePigMovement.test.ts  usePigMovement.ts  usePolledReader.test.tsx  usePolledReader.ts  useProposals.ts  useSettingsWindow.ts  useViewport.ts
src/lib/: capState.test.ts  capState.ts
src/types/: error.ts  focus.ts  health.ts  monitor.ts  pig.ts  proposal.ts  settings.ts  timer.ts
