[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/domain",
    "crates/storage",
    "crates/commands",
    "crates/http-api",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.77"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
