[package]
name = "adhd-ranch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Issue tracking for a five-year-old"

[lib]
name = "adhd_ranch_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "adhd-ranch"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
adhd-ranch-domain = { path = "../crates/domain" }
adhd-ranch-storage = { path = "../crates/storage" }
adhd-ranch-http-api = { path = "../crates/http-api" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["v7"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
