[package]
name = "adhd-ranch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Issue tracking for a five-year-old"

[lib]
name = "adhd_ranch_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "adhd-ranch"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
adhd-ranch-commands = { path = "../crates/commands" }
adhd-ranch-domain = { path = "../crates/domain" }
adhd-ranch-storage = { path = "../crates/storage" }
adhd-ranch-http-api = { path = "../crates/http-api" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["v7"] }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-notification = "2"
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSWindow"] }
objc2-foundation = { version = "0.2", features = ["NSString"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
