[package]
name = "adhd-ranch-commands"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
adhd-ranch-domain = { path = "../domain" }
adhd-ranch-storage = { path = "../storage" }
serde = { workspace = true }

[dev-dependencies]
tempfile = "3"
