[package]
name = "adhd-ranch-http-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
adhd-ranch-commands = { path = "../commands" }
adhd-ranch-domain = { path = "../domain" }
adhd-ranch-storage = { path = "../storage" }
axum = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["net", "rt", "macros", "sync"] }
tower = "0.5"
uuid = { version = "1", features = ["v7", "serde"] }
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "net", "io-util"] }
tower = { version = "0.5", features = ["util"] }
