[package]
name = "adhd-ranch-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
adhd-ranch-domain = { path = "../domain" }
fs2 = "0.4"
notify = "6"
notify-debouncer-mini = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
